@@ -21,6 +21,7 @@
 
 const crypto = require( 'crypto' );
 const VaultPlugin = require( './VaultPlugin' );
+const spectools = require( 'futoin-invoker/SpecTools' );
 
 /**
  * HMAC plugin
@@ -68,13 +69,9 @@ class HMACPlugin extends VaultPlugin {
         this.sign( as, key, data, options );
 
         as.add( ( as, valid_sig ) => {
-            try {
-                const res = crypto.timingSafeEqual( valid_sig, sig );
+            const res = spectools.secureEqualBuffer( valid_sig, sig );
 
-                if ( !res ) {
-                    as.error( 'InvalidSignature' );
-                }
-            } catch ( _ ) {
+            if ( !res ) {
                 as.error( 'InvalidSignature' );
             }
         } );
