@@ -19,9 +19,9 @@
  * limitations under the License.
  */
 
-const crypto = require( 'crypto' );
 const VaultPlugin = require( './VaultPlugin' );
 const password_gen = require( '../password_gen' );
+const spectools = require( 'futoin-invoker/SpecTools' );
 
 /**
  * Password plugin
@@ -59,13 +59,9 @@ class PasswordPlugin extends VaultPlugin {
     }
 
     verify( as, key, _edata, sig, _options = {} ) {
-        try {
-            const res = crypto.timingSafeEqual( key, sig );
+        const res = spectools.secureEqualBuffer( key, sig );
 
-            if ( !res ) {
-                as.error( 'InvalidSignature' );
-            }
-        } catch ( _ ) {
+        if ( !res ) {
             as.error( 'InvalidSignature' );
         }
     }
